# Qt-sseum

./: .env.example  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  init_db.sql  seed_db.sql
src/client/: CMakeLists.txt
src/client/backend/: CMakeLists.txt
src/client/backend/arena/: arena_client.cpp  arena_client.hpp
src/client/backend/auth/: auth_client.cpp  auth_client.hpp
src/client/backend/greeter/: greeter_client.cpp  greeter_client.hpp
src/client/backend/grpc_client/: grpc_client.cpp
src/client/backend/registration/: registration_client.cpp  registration_client.hpp
src/client/backend/trainer/: trainer_client.cpp  trainer_client.hpp
src/client/backend/user/: user_client.cpp  user_client.hpp
src/client/core/: CMakeLists.txt  channel_provider.hpp  grpc_client_base.cpp  grpc_client_base.hpp  session_logic.cpp  session_logic.hpp  token_manager.cpp  token_manager.hpp
src/client/frontend/: CMakeLists.txt  frontend.qrc  main.cpp
src/client/frontend/arena/: arena_client_qt.cpp  arena_client_qt.hpp  arena_worker.cpp  arena_worker.hpp
src/client/frontend/auth/: auth_client_qt.cpp  auth_client_qt.hpp  auth_worker.cpp  auth_worker.hpp
src/client/frontend/greeter/: greeter_client_qt.cpp  greeter_client_qt.hpp  greeter_worker.cpp  greeter_worker.hpp
src/client/frontend/grpc_client/: grpc_client_qt.cpp
src/client/frontend/models/: gladiator_qml.cpp  gladiator_qml.hpp  item_qml.cpp  item_qml.hpp  user_qml.cpp  user_qml.hpp
src/client/frontend/qml/: App.qml  ArenaPage.qml  GreeterPage.qml  LoginPage.qml  Main.qml  MainPage.qml  Navigator.qml  RegisterPage.qml  TrainerPage.qml
src/client/frontend/registration/: registration_client_qt.cpp  registration_client_qt.hpp  registration_worker.cpp  registration_worker.hpp
src/client/frontend/trainer/: trainer_client_qt.cpp  trainer_client_qt.hpp  trainer_worker.cpp  trainer_worker.hpp
src/client/frontend/user/: user_client_qt.cpp  user_client_qt.hpp  user_worker.cpp  user_worker.hpp
src/database/: CMakeLists.txt
src/database/dao/: errors.hpp  i_gladiator_dao.hpp  i_item_dao.hpp  i_user_dao.hpp
src/database/dao/postgres/: pg_gladiator_dao.cpp  pg_gladiator_dao.hpp  pg_item_dao.cpp  pg_item_dao.hpp  pg_user_dao.cpp  pg_user_dao.hpp
src/database/model/: gladiator.hpp  item.hpp  user.hpp
src/proto/: arena.proto  auth.proto  common.proto  greeter.proto  registration.proto  trainer.proto  user.proto
src/server/: CMakeLists.txt  main.cpp
src/server/arena/: arena_service.cpp  arena_service.hpp
src/server/auth/: auth_service.cpp  auth_service.hpp
src/server/greeter/: greeter_service.cpp  greeter_service.hpp
src/server/registration/: registration_service.cpp  registration_service.hpp
src/server/trainer/: trainer_service.cpp  trainer_service.hpp
src/server/user/: user_service.cpp  user_service.hpp
src/utils/: CMakeLists.txt  db_config.cpp  db_config.hpp  load_dotenv.cpp  load_dotenv.hpp  verify_auth.cpp  verify_auth.hpp  verify_jwt.cpp  verify_jwt.hpp
